--- a/styles.css
+++ b/styles.css
@@ -20,17 +20,20 @@ body {
   background-size: 50%;
   line-height: 1.5;
 }
-.card {
+
+.valentine-card {
   border-radius: 15px;
   padding: 20px;
   text-align: center;
   width: 300px;
 }
-.title {
+
+.valentine-title {
   font-size: 24px;
   margin-top: 0;
 }
-.heart {
+
+.valentine-heart {
   width: 200px;
   height: 200px;
   position: relative;
@@ -40,7 +43,7 @@ body {
   background-size: 100%;
 }
 
-.button {
+.valentine-button {
   background-color: var(--heart-color);
   color: var(--white);
   border: none;
@@ -53,22 +56,27 @@ body {
   border-radius: 5px;
   width: 80px;
 }
-.button.button__negative {
+
+.valentine-button.no-button {
   background-color: var(--white);
   color: var(--heart-color);
   border: 1px solid var(--heart-color);
 }
-.button.button__error {
+
+.valentine-button.error-button {
   width: 100%;
   display: none;
 }
-.button:focus {
+
+.valentine-button:focus {
   outline: none;
 }
-.text {
+
+.valentine-text {
   font-size: 14px;
   margin-top: 30px;
 }
+
 .img-fluid {
   width: 100%;
   height: auto;
